--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -30,11 +30,11 @@
     <div class="row mt-5 mb-5">
 
         <div class="col-2">
-            <img src="{% static 'main/images/MANISH VISHWAKARMA.jpg' %}" alt="My photo" class="img-fluid rounded" width="240px">
+            <img src="{% static 'main/images/mypic.jpg' %}" alt="My photo" class="img-fluid rounded" width="500px">
         </div>
 
         <div class="col-10">
-            <h1>Abhishek Singh</h1>
+            <h1>Manish</h1>
             <p>As policymakers grapple with how to address hate speech and disinformation on the internet, they’re eying the legal structure underpinning collaborative software development: legal safe harbors. These safe harbors protect online platforms from liability for the user content that they host, and without these safe harbors, countless user-generated content platforms like GitHub wouldn’t be here today.</p>
         </div>
 
